--- a/pokeapp/frontend/package.json
+++ b/pokeapp/frontend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "axios": "^0.21.1",
     "react-bootstrap": "^1.5.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0"
